--- a/home.html
+++ b/home.html
@@ -68,6 +68,7 @@
                 <h2>Bill Gates</h2>
                 <div class="net-worth">$105.8 Billion</div>
                 <div class="position">Co-founder of <span class="company">Microsoft</span></div>
+                <a href="billgates.html" style="display: inline-block; margin-top: 20px; padding: 10px 25px; background: linear-gradient(135deg, #60a5fa, #3b82f6); color: white; text-decoration: none; border-radius: 25px; transition: all 0.3s ease;">Learn More</a>
             </div>
         </div>
     </section>
