--- a/jeffbezos.html
+++ b/jeffbezos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jeff Bezos - Tech Visionary</title>
     <link rel="stylesheet" href="page.css">
-    <link rel="stylesheet" href="billgates.css">
+    <link rel="stylesheet" href="jeffbezos.css">
 </head>
 <body>
     <div class="stars" id="stars"></div>
