--- a/home.html
+++ b/home.html
@@ -35,6 +35,7 @@
                 <h2>Elon Musk</h2>
                 <div class="net-worth">$480 Billion</div>
                 <div class="position">CEO of <span class="company">Tesla & SpaceX</span></div>
+                <a href="musk.html" style="display: inline-block; margin-top: 20px; padding: 10px 25px; background: linear-gradient(135deg, #60a5fa, #3b82f6); color: white; text-decoration: none; border-radius: 25px; transition: all 0.3s ease;">Learn More</a>
             </div>
         </div>
 
@@ -46,6 +47,7 @@
                 <h2>Mark Zuckerberg</h2>
                 <div class="net-worth">$265.5 Billion</div>
                 <div class="position">CEO of <span class="company">Meta</span></div>
+                <a href="zuck.html" style="display: inline-block; margin-top: 20px; padding: 10px 25px; background: linear-gradient(135deg, #60a5fa, #3b82f6); color: white; text-decoration: none; border-radius: 25px; transition: all 0.3s ease;">Learn More</a>
             </div>
         </div>
 
@@ -57,6 +59,7 @@
                 <h2>Jeff Bezos</h2>
                 <div class="net-worth">$243.2 Billion</div>
                 <div class="position">CEO of <span class="company">Amazon</span></div>
+                <a href="jeff.html" style="display: inline-block; margin-top: 20px; padding: 10px 25px; background: linear-gradient(135deg, #60a5fa, #3b82f6); color: white; text-decoration: none; border-radius: 25px; transition: all 0.3s ease;">Learn More</a>
             </div>
         </div>
 
@@ -150,4 +153,5 @@
         });
     </script>
 </body>
+
 </html>
