--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
                 <h2>Elon Musk</h2>
                 <div class="net-worth">$480 Billion</div>
                 <div class="position">CEO of <span class="company">Tesla & SpaceX</span></div>
-                <a href="musk.html" style="display: inline-block; margin-top: 20px; padding: 10px 25px; background: linear-gradient(135deg, #60a5fa, #3b82f6); color: white; text-decoration: none; border-radius: 25px; transition: all 0.3s ease;">Learn More</a>
+                <a href="elonmust.html" style="display: inline-block; margin-top: 20px; padding: 10px 25px; background: linear-gradient(135deg, #60a5fa, #3b82f6); color: white; text-decoration: none; border-radius: 25px; transition: all 0.3s ease;">Learn More</a>
             </div>
         </div>
 
@@ -53,7 +53,7 @@
 
         <div class="leader">
             <div class="leader-image">
-                <img src="jeff.png" alt="Tech Leader 3">
+                <img src="jeffbezos.png" alt="Tech Leader 3">
             </div>
             <div class="leader-info">
                 <h2>Jeff Bezos</h2>
@@ -155,3 +155,4 @@
 </body>
 
 </html>
+
