--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
                 <h2>Jeff Bezos</h2>
                 <div class="net-worth">$243.2 Billion</div>
                 <div class="position">CEO of <span class="company">Amazon</span></div>
-                <a href="jeff.html" style="display: inline-block; margin-top: 20px; padding: 10px 25px; background: linear-gradient(135deg, #60a5fa, #3b82f6); color: white; text-decoration: none; border-radius: 25px; transition: all 0.3s ease;">Learn More</a>
+                <a href="jeffbezos.html" style="display: inline-block; margin-top: 20px; padding: 10px 25px; background: linear-gradient(135deg, #60a5fa, #3b82f6); color: white; text-decoration: none; border-radius: 25px; transition: all 0.3s ease;">Learn More</a>
             </div>
         </div>
 
@@ -155,4 +155,5 @@
 </body>
 
 </html>
+
 
