--- a/home.html
+++ b/home.html
@@ -28,17 +28,16 @@
 
     <section class="leaders" id="legends">
         <div class="leader">
-    	   <div class="leader-image">
-               <img src="elonmust.png" alt="Elon Musk">
-    	   </div>
-     	   <div class="leader-info">
-        	<h2>Elon Musk</h2>
-        	<div class="net-worth">$480 Billion</div>
-        	<div class="position">CEO of <span class="company">Tesla & SpaceX</span></div>
-        	<a href="elonmust.html" style="display: inline-block; margin-top: 20px; padding: 10px 25px; background: linear-gradient(135deg, #60a5fa, #3b82f6); color: white; text-decoration: none; border-radius: 25px; transition: all 0.3s ease;">Learn More</a>
-   	  </div>
-	</div>
-
+            <div class="leader-image">
+                <img src="elonmusk.png" alt="Tech Leader 1">
+            </div>
+            <div class="leader-info">
+                <h2>Elon Musk</h2>
+                <div class="net-worth">$480 Billion</div>
+                <div class="position">CEO of <span class="company">Tesla & SpaceX</span></div>
+                <a href="elonmusk.html" style="display: inline-block; margin-top: 20px; padding: 10px 25px; background: linear-gradient(135deg, #60a5fa, #3b82f6); color: white; text-decoration: none; border-radius: 25px; transition: all 0.3s ease;">Learn More</a>
+            </div>
+        </div>
 
         <div class="leader">
             <div class="leader-image">
@@ -48,6 +47,7 @@
                 <h2>Mark Zuckerberg</h2>
                 <div class="net-worth">$265.5 Billion</div>
                 <div class="position">CEO of <span class="company">Meta</span></div>
+                <a href="zuck.html" style="display: inline-block; margin-top: 20px; padding: 10px 25px; background: linear-gradient(135deg, #60a5fa, #3b82f6); color: white; text-decoration: none; border-radius: 25px; transition: all 0.3s ease;">Learn More</a>
             </div>
         </div>
 
@@ -59,6 +59,7 @@
                 <h2>Jeff Bezos</h2>
                 <div class="net-worth">$243.2 Billion</div>
                 <div class="position">CEO of <span class="company">Amazon</span></div>
+                <a href="jeffbezos.html" style="display: inline-block; margin-top: 20px; padding: 10px 25px; background: linear-gradient(135deg, #60a5fa, #3b82f6); color: white; text-decoration: none; border-radius: 25px; transition: all 0.3s ease;">Learn More</a>
             </div>
         </div>
 
@@ -70,6 +71,7 @@
                 <h2>Bill Gates</h2>
                 <div class="net-worth">$105.8 Billion</div>
                 <div class="position">Co-founder of <span class="company">Microsoft</span></div>
+                <a href="billgates.html" style="display: inline-block; margin-top: 20px; padding: 10px 25px; background: linear-gradient(135deg, #60a5fa, #3b82f6); color: white; text-decoration: none; border-radius: 25px; transition: all 0.3s ease;">Learn More</a>
             </div>
         </div>
     </section>
@@ -151,4 +153,5 @@
         });
     </script>
 </body>
+
 </html>
