--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#legends">Legends</a></li>
             <li><a href="#innovations">Innovations</a></li>
-            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
         </ul>
     </nav>
 
@@ -104,7 +104,7 @@
         // Smooth scrolling for navigation
         document.querySelectorAll('nav a').forEach(link => {
             link.addEventListener('click', (e) => {
-                e.preventDefault();
+                // e.preventDefault();
                 const targetId = link.getAttribute('href');
                 const targetElement = document.querySelector(targetId);
                 if (targetElement) {
