--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#legends">Legends</a></li>
             <li><a href="#innovations">Innovations</a></li>
-            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
         </ul>
     </nav>
 
