--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tech Legends Gallery</title>
-  <link rel="stylesheet" href="page.css">
+  <link rel="stylesheet" href="gallery.css">
 </head>
 <body>
   <div class="stars" id="stars"></div>
@@ -13,7 +13,7 @@
     <ul>
       <li><a href="home.html">Home</a></li>
       <li><a href="home.html#legends">Legends</a></li>
-      <li><a href="index.html#innovations">Innovations</a></li>
+      <li><a href="home.html#innovations">Innovations</a></li>
       <li><a href="gallery.html" class="active">Gallery</a></li>
     </ul>
   </nav>
