--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
     <ul>
       <li><a href="home.html">Home</a></li>
       <li><a href="home.html#legends">Legends</a></li>
-      <li><a href="home.html#innovations">Innovations</a></li>
+      <li><a href="innovations.html">Innovations</a></li>
       <li><a href="gallery.html" class="active">Gallery</a></li>
     </ul>
   </nav>
