--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#legends">Legends</a></li>
-            <li><a href="#innovations">Innovations</a></li>
+            <li><a href="innovations.html">Innovations</a></li>
             <li><a href="gallery.html">Gallery</a></li>
         </ul>
     </nav>
@@ -78,79 +78,7 @@
 
     <div class="glow" id="glow"></div>
 
-    <script>
-        // Create animated stars
-        function createStars() {
-            const starsContainer = document.getElementById('stars');
-            const numStars = 100;
 
-            for (let i = 0; i < numStars; i++) {
-                const star = document.createElement('div');
-                star.className = 'star';
-                star.style.left = Math.random() * 100 + '%';
-                star.style.top = Math.random() * 100 + '%';
-                star.style.animationDelay = Math.random() * 3 + 's';
-                starsContainer.appendChild(star);
-            }
-        }
-
-        // Glowing cursor effect
-        document.addEventListener('mousemove', (e) => {
-            const glow = document.getElementById('glow');
-            glow.style.left = e.clientX - 100 + 'px';
-            glow.style.top = e.clientY - 100 + 'px';
-        });
-
-        // Smooth scrolling for navigation
-        document.querySelectorAll('nav a').forEach(link => {
-            link.addEventListener('click', (e) => {
-                const targetId = link.getAttribute('href');
-                const targetElement = document.querySelector(targetId);
-                if (targetElement) {
-                    targetElement.scrollIntoView({
-                        behavior: 'smooth',
-                        block: 'start'
-                    });
-                }
-            });
-        });
-
-        // Scroll animations
-        const observerOptions = {
-            threshold: 0.2,
-            rootMargin: '0px 0px -50px 0px'
-        };
-
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.style.opacity = '1';
-                    entry.target.style.transform = 'translateY(0)';
-                }
-            });
-        }, observerOptions);
-
-        // Initialize
-        createStars();
-
-        // Observe leader cards for scroll animations
-        document.querySelectorAll('.leader').forEach(leader => {
-            leader.style.opacity = '0';
-            leader.style.transform = 'translateY(50px)';
-            leader.style.transition = 'all 0.8s ease';
-            observer.observe(leader);
-        });
-
-        // Navigation background on scroll
-        window.addEventListener('scroll', () => {
-            const nav = document.querySelector('nav');
-            if (window.scrollY > 50) {
-                nav.style.background = 'rgba(10, 22, 40, 0.95)';
-            } else {
-                nav.style.background = 'rgba(10, 22, 40, 0.9)';
-            }
-        });
-    </script>
 </body>
 
 </html>
