--- a/innovations.html
+++ b/innovations.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tech Legends Innovations</title>
-  <link rel="stylesheet" href="gallery.css">
+  <link rel="stylesheet" href="page.css">
   <style>
     /* Caption styling */
     .gallery-grid figure {
@@ -167,3 +167,4 @@
   </script>
 </body>
 </html>
+
